addes product category and category page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9747,7 +9747,7 @@ body {
 }
 
 .navbar-toggler-icon {
-  color: #38A1F3;
+  color: #0cb8b6;
 }
 
 nav .nav-link {
@@ -9817,7 +9817,7 @@ nav.black {
   content: "";
   width: 50px;
   height: 2px;
-  background-color: #38A1F3;
+  background-color: #0cb8b6;
   bottom: 0;
   left: 50%;
   margin-left: -25px;
@@ -9848,8 +9848,7 @@ nav.black {
   content: "";
   width: 50px;
   height: 2px;
-  background: #136a8a;
-  background: linear-gradient(to right, #267871, #136a8a);
+  background: #0cb8b6;
   bottom: 0;
   left: 50%;
   margin-left: -25px;
@@ -10098,4 +10097,20 @@ a .dept:hover {
 
 .divider {
   border-bottom: 2px solid #0cb8b6;
+}
+
+.categories p {
+  color: #0cb8b6;
+}
+
+.categories a {
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 10px 5px;
+}
+
+.categories a:hover {
+  color: #0cb8b6;
+  transition: 0.5s;
 }
