--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -13,7 +13,7 @@ body {
 
 .navbar {
     border: 1px solid rgba(0, 0, 0, 0.1);
-    margin-top: 100px;
+    //margin-top: 100px;
     background-color: whitesmoke;
     font-size: 12px;
 }
@@ -68,8 +68,8 @@ nav .navbar-brand {
 
 .context {
     background: #0cb8b6;
-    font-family: 'Francois One', sans-serif;
-    margin-top: 95px;
+    //font-family: 'Francois One', sans-serif;
+    margin-top: 20px;
     color: whitesmoke;
     height: 150px;
     padding: 50px;
@@ -77,9 +77,34 @@ nav .navbar-brand {
     text-transform: uppercase;
 }
 
+.dashboard-context {
+    position: relative;
+    background: #2980b9; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #2c3e50, #2980b9); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #2c3e50, #2980b9);
+    height: 100px;
+}
+
+.d-context {
+    position: relative;
+    top: 10%;
+    left: 0;
+}
+
+.d-context h3 {
+    font-size: 22px;
+    color: powderblue;
+}
+
+.d-context span {
+    color: #8ac1ef;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
 .head1 {
     color: #0cb8b6;
-    font-family: 'Francois One', sans-serif;
+    //font-family: 'Francois One', sans-serif;
 }
 
 .section-title h4 {
@@ -172,6 +197,7 @@ select.form-control {
     outline: none;
     text-align: center;
 }
+
 textarea.form-control {
     border: 1px solid #0cb8b6;
     box-shadow: none;
@@ -340,7 +366,7 @@ textarea.form-control {
 
 .quote {
     line-height: 2;
-    font-family: 'Great Vibes', cursive;
+    //font-family: 'Great Vibes', cursive;
 }
 
 /*Footer*/
@@ -364,6 +390,14 @@ footer .form-control:focus {
     color: #38A1F3;
 }
 
+.card-header {
+    position: relative;
+    background: #2980b9; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #2c3e50, #2980b9); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #2c3e50, #2980b9);
+    color: whitesmoke;
+}
+
 .contact li {
     line-height: 2;
 }
@@ -383,7 +417,7 @@ footer .form-control:focus {
 
 a .dept {
     color: #444444;
-    font-family: 'Francois One', sans-serif;
+    //font-family: 'Francois One', sans-serif;
     padding: 10px 10px 10px 0;
     border-bottom: 1px solid rgba(0, 0, 0, .07);
 }
