--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10082,7 +10082,7 @@ textarea.form-control {
 }
 
 .form-group textarea {
-  border: 1px solid black;
+  border: 1px solid #0cb8b6;
 }
 
 .form-group textarea:focus {
@@ -10154,7 +10154,6 @@ a .dept:hover {
 
 .categories a {
   color: black;
-  font-weight: bold;
   text-decoration: none;
   padding: 10px 5px;
 }
@@ -10190,4 +10189,23 @@ a .dept:hover {
 
 h5.info {
   color: #0cb8b6;
+}
+
+.search-sec {
+  margin: 0 auto;
+}
+
+.search-slt {
+  line-height: 1.5;
+  color: #55595c;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  height: calc(3rem + 2px) !important;
+  border-radius: 0;
+}
+
+.wrn-btn {
+  height: calc(3rem + 2px) !important;
+  border-radius: 0;
 }
