--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -368,7 +368,7 @@ textarea.form-control {
 }
 
 .form-group textarea {
-    border: 1px solid black;
+    border: 1px solid #0cb8b6;
 }
 
 .form-group textarea:focus {
@@ -442,7 +442,6 @@ a .dept:hover {
 
 .categories a {
     color: black;
-    font-weight: bold;
     text-decoration: none;
     padding: 10px 5px;
 }
@@ -480,3 +479,22 @@ a .dept:hover {
 h5.info{
     color: #0cb8b6;
 }
+
+.search-sec{
+    margin: 0 auto;
+}
+.search-slt{
+    //display: block;
+    line-height: 1.5;
+    color: #55595c;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    height: calc(3rem + 2px) !important;
+    border-radius:0;
+}
+.wrn-btn{
+    height: calc(3rem + 2px) !important;
+    border-radius:0;
+}
+
